# helheim-incl

./: .gitignore  build-monuments.sh  extraction.sh  pyproject.toml  readme.md
src/helheim_incl/: apply_adjustment.py  extract_adjustment.py  incl.py
support/: ATLAS-master-matrices-readme.txt  compute-monuments.sh  monuments-north.txt  monuments-south.txt  ranges.json
